Robot.mouseWheel not implemented correctly on Linux, Mac

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P3
    • jfx11
    • Affects Version/s: jfx11
    • Component/s: javafx

      I tested Robot.mouseWheel on all three platforms, and only Windows is implemented correctly.

      On Linux, positive and negative scroll values are backwards.

      Mac appears not to be scaling the values correctly (or at all).

            Assignee:
            Michael Ennen
            Reporter:
            Kevin Rushforth
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: