8207372: Robot.mouseWheel not implemented correctly on Linux, Mac

Reviewed-by: kcr